--- a/app/src/main/res/layout/sys_info_toolbox_layout.xml
+++ b/app/src/main/res/layout/sys_info_toolbox_layout.xml
@@ -16,6 +16,7 @@
         android:id="@+id/generate_firmware_updater_zip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="true"
         android:layout_marginBottom="5dp"
         android:text="Generate Firmware Flashable"
         android:textColor="#000000"
